    files in the config any more).
  * README: add a few more alternate aggregators

* Fri Nov 07 15:23:13 2003, pabs <pabs@pablotron.org>
  * raggle: don't require ruby1.8

* Thu Nov 13 00:34:14 2003, heap <vaine@cs.helsink.fi>
  * raggle: Change how the browser is launched, this seems to fix 
  the bug that prevented some urls from loading properly.
  * BUGS: mark the URL loading bug as fixed.

* Thu Nov 20 08:31:58 2003, pabs <pabs@pablotron.org>
  * raggle: remove REXML::Encoding::ENCODING_CLAIMS stuff; it's apparently
    been either moved or removed from REXML.
  * doc/pauls_feeds.opml.gz: updated

* Fri Jan 30 22:46:08 2004, pabs <pabs@pablotron.org>
  * raggle: remove Thread::critical stuff, those appear to be 
    causing the locked feed grabbing thread stuff
  * raggle: fix a few race conditions in the parallel grabbing
    stuff
  * raggle: move feed grabbing code to grab_feed(), removes some
    potential race issues
  * raggle: disable non-parallel feed grabbing for the time being

* Sat Jan 31 09:54:00 2004, pabs <pabs@pablotron.org>
  * raggle: removed unnecessary thread code
  * raggle: set thread title and priority in grab_feed()
  * raggle: wait on each grabbing thread for up to
    $config['thread_reap_timeout'] seconds (then just give up and
    leave them running indefinitely.. probably not the smartest thing to
    do at the moment :/)
  * raggle: added $config['thread_priority_grab']
  * raggle: added $config['max_threads']
  * doc/pauls_feeds.opml.gz: updated to the latest and greatest

* Thu Feb 19 21:11:51 2004, pabs <pabs@pablotron.org>
  * raggle: fixed reap stuff.  this has been running for over a 
    week now w/o crashing. so i _think_ it's stable now
  * raggle: fix regex warnings (reported by Brian Almeida)
  * raggle: fix date description showing as timestamp for feeds

* Thu Feb 19 23:09:06 2004, pabs <pabs@pablotron.org>
  * TODO: updated. marked off some stuff, added notes
  * BUGS: added current bugs, marked off fixed ones